<?xml version="1.0" encoding="utf-8"?>

<layout>
    <data>
        <variable
            name="currency"
            type="com.niku.moneymate.currency.MainCurrency" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.currency.CurrencyFragment">

    <TextView
        android:id="@+id/textView_currency_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/currency_code_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/currency_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/currency_code_hint"
        android:text="@{currency.currency_code}"
        app:layout_constraintStart_toEndOf="@+id/textView_currency_code"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView_currency_title"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginTop="32dp"
        android:text="@string/currency_title_label"
        app:layout_constraintEnd_toEndOf="@+id/textView_currency_code"
        app:layout_constraintTop_toBottomOf="@+id/textView_currency_code" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/currency_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/currency_title_hint"
        android:text="@{currency.currency_title}"
        app:layout_constraintBottom_toBottomOf="@+id/textView_currency_title"
        app:layout_constraintStart_toEndOf="@+id/textView_currency_title"
        app:layout_constraintTop_toTopOf="@+id/textView_currency_title" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/currency_isDefault"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/currency_default_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_currency_title" />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>