<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.transaction.TransactionFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/transaction_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/default_transaction_date" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transaction_date">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_account_from_v2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin"
            android:drawableStart="@drawable/ic_baseline_account_balance_wallet_24"
            tools:text="Cache" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/arrow_forward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/image_margin"
            android:src="@drawable/ic_baseline_arrow_forward_24" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_account_to_v2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_account_balance_wallet_24"
            tools:text="Cache" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_buttons_row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_buttons">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_category_v2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:drawableStart="@drawable/ic_action_navbar_item_categories"
            android:drawablePadding="@dimen/layout_margin"
            tools:text="Food" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_project_v2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin"
            android:drawableStart="@drawable/ic_action_navbar_item_projects"
            android:drawablePadding="@dimen/layout_margin"
            tools:text="No project" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/image_button_transaction_type"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_income_36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_buttons_row2" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/transaction_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:ellipsize="middle"
        android:hint=""
        android:inputType="number|numberDecimal"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_button_transaction_type"
        app:layout_constraintEnd_toStartOf="@+id/button_currency_v2"
        app:layout_constraintStart_toEndOf="@+id/image_button_transaction_type"
        app:layout_constraintTop_toTopOf="@+id/image_button_transaction_type" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_currency_v2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
         app:layout_constraintBottom_toBottomOf="@+id/transaction_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/transaction_amount"
        tools:text="RUB" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_ok_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_cancel_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ok_button" />

</androidx.constraintlayout.widget.ConstraintLayout>