<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/budget"
        android:title="@string/bottom_nav_item_budget"
        android:icon="@drawable/ic_action_navbar_item_budget" />
    <item
        android:id="@+id/accounts"
        android:title="@string/bottom_nav_item_accounts"
        android:icon="@drawable/ic_action_navbar_item_account"/>
    <item
        android:id="@+id/categories"
        android:title="@string/bottom_nav_item_categories"
        android:icon="@drawable/ic_action_navbar_item_categories"/>
    <item
        android:id="@+id/projects"
        android:title="@string/bottom_nav_item_projects"
        android:icon="@drawable/ic_action_navbar_item_projects"/>
    <item
        android:id="@+id/currencies"
        android:title="@string/bottom_nav_item_currencies"
        android:icon="@drawable/ic_action_navbar_item_currency"/>

</menu>