...
    <string name="currency_title_hint">Enter currency title</string>
    <string name="new_account">New account</string>
    <string name="account_note_hint">Enter note for the account</string>
    <string name="account_note_label">Note</string>
    <string name="category_title_hint">Enter category title</string>
    <string name="category_title_label">Category title</string>
    <string name="new_currency">New currency</string>
    <string name="account_currency_label">Currency</string>
    <string name="currency_code_label">Currency code</string>
    <string name="currency_code_hint">Enter currency code</string>
    <string name="currency_default_label">Default currency</string>
    <string name="category_type_label">Type</string>
    <string name="category_type_hint">Enter category type (+=1/-=-1)</string>
...
    <string name="category_default_label">Default</string>
    <string name="account_initial_balance_label">Initial balance</string>
    <string name="account_current_balance_label">Current balance</string>
    <string name="account_initial_balance_hint">Enter initial balance</string>
    <string name="project_title_hint">Enter project tite</string>
    <string name="project_title_label">Title</string>
    <string name="new_project">New project</string>
    <string name="project_default_label">Default</string>
    <string name="fragment_name_account">Account</string>
    <string name="fragment_name_transaction">Transaction</string>
    <string name="fragment_name_currency">Currency</string>
    <string name="fragment_name_project">Project</string>
    <string name="fragment_name_category">Category</string>
...
